2004-02-21  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/shapes.c (idle_add, idle_remove): 
	* examples/gears.c (idle_add, idle_remove):
	* examples/rotating-square.c (idle_add, idle_remove): 
	gtk_idle_add()/remove() is deprecated in GTK+ 2.3. Use
	g_idle_add_full()/g_source_remove().

	* examples/button.c (timeout_add, timeout_remove): 
	* examples/logo.c (timeout_add, timeout_remove): 
	* examples/multiarb.c (timeout_add, timeout_remove): 
	* examples/viewlw.c (timeout_add, timeout_remove): 
	* examples/coolwave.c (timeout_add, timeout_remove): 
	* examples/coolwave2.c (timeout_add, timeout_remove): 
	* examples/template.c (timeout_add, timeout_remove): 
	* examples/font-pangoft2-tex.c (timeout_add, timeout_remove): 
	gtk_timeout_add()/remove() is deprecated in GTK+ 2.3. Use
	g_timeout_add()/g_source_remove().

2004-02-20  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* m4macros/gtkglext.m4: Quote AC_DEFUN argument to avoid warnings
	with automake-1.8.x.

2004-02-20  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gdk/*.[ch]: 
	* gdk/glext/*.[ch]: 
	* gdk/x11/*.[ch]: 
	* gdk/win32/*.[ch]: 
	* gtk/*.[ch]: Updated copyright.

2004-02-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (gtk_widget_get_gl_context):
	gtk_quit_add_destroy() call is removed because it cause a problem
	with recursive mainloop.
	(gtk_gl_widget_unrealize): Rendering context is now destroyed on
	"unrealize" signal.

2003-11-20  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.5 ====

	* configure.in: Version 1.0.5, binary age 5, interface age 3.

2003-11-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/low-level.c (realize): Set a background of "None" on
	window to avoid AIX X server crash.

2003-11-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (gtk_gl_widget_size_allocate): Check whether
	GdkGLWindow is already realized.
