@@ -1,3 +1,7 @@
+2004-03-10  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gtkglext.nsi.in: Rewritten for the latest NSIS 2 beta.
+
 2004-02-21  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* examples/shapes.c (idle_add, idle_remove): 
